src/components/MainPanel/Home/Home.module.css
.home{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: 100%;
    gap: 10px;
    padding: 10px;
}
.top{
    width: 100%;
    height: 40px;
    min-height: 40px;
    display: flex;
    grid-row: 1 / 2;
    padding: 0 15px;
}
.top .current-time{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.top .date{
    display: flex;
    gap: 10px;
    align-items: center;
}

/* pinned tasks */
.pinned{
    max-height: calc(100% - 170px);
    min-height: 200px;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px 5px;
    border-radius: 5px;
    overflow: hidden;
    grid-row: 2 / 3;
    flex-grow: 1;
}
.pinned-tasks-container{
    height: 100%;
    width: 100%;
    max-height: 100%;
    display: flex;
    flex-direction: column;
    gap: 5px;
    overflow-y: auto;
    overflow-x: hidden;
}

.home-task{
    width: 100%;
    height: 40px;
    min-height: 40px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #0F0F0F;
    border-radius: 5px;
    padding: 0 15px;
}
.home-task .task-title{
    width: auto;
    max-width: calc(100% - 100px);
    justify-content: start;
    height: fit-content;
}
.home-task .color{
    width: 10px;
    height: 10px;
    border-radius: 50%;
}
.home .no-tasks-message{
    margin-left: 15px;
}

/* habit */
.habit{
    width: 100%;
    height: 30px;
    overflow: hidden;
    margin-bottom: 10px;
    border-radius: 5px;
    gap: 15px;
    display: flex;
    flex-direction: column;
    transition: all 0.1s;
}
.habit.expanded-habit{
    height: 110px !important;
    min-height: 110px !important;
    transition: all 0.1s;
    padding: 10px 0;
}
.habit .habit-header{
    width: 100%;
    height: 30px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: row;
}
.expanded-habit .habit-header img{
    transform: rotateZ(-90deg);
    transition: transform 0.2s;
}
.habit .habit-header img{
    height: 100%;
    width: auto;
    transition: transform 0.2s;
}
.habit .habit-header h3{
    padding-left: 10px;
    height: 30px;
    min-height: 30px;
    width: fit-content;
}
.habit-container{
    width: 100%;
    height: 50px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: #0F0F0F;
    border-radius: 5px;
    align-self: center;
}
.week-day{
    height: 50px;
    width: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
}
.week-day-name{
    color: white;
    opacity: 0.7;
}
.selected-day p{
    color: #ff4400;
    opacity: 1;
}



@media (orientation: portrait) {

    .home{
        width: 100vw;
        height: calc(50vh - 30px);
    }

}

